// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has aria-label on header columns 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-label="column 1 aria label"
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        aria-label="column 2 aria label"
        class="c3"
        scope="col"
      />
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has clickable rows styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5:focus {
  position: relative;
  z-index: 3;
}

.c5:focus::after {
  content: '';
  height: calc(100% + 3px);
  left: 0;
  position: absolute;
  top: -2px;
  width: 100%;
}

.c5:hover {
  cursor: pointer;
}

.c5:hover td {
  background-color: #DBDEE1;
}

.c5:not(:hover) td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
      role="button"
      tabindex="0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
      role="button"
      tabindex="0"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
      role="button"
      tabindex="0"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has column with headers grouped 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
  border-right: 1px solid #DBDEE1;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: right;
  border-right: 1px solid #DBDEE1;
}

.c4:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c5 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c5:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
  text-align: left;
}

.c9 {
  background-color: inherit;
  text-align: left;
  border-right: 1px solid #DBDEE1;
}

.c10 {
  background-color: inherit;
  text-align: right;
  border-right: 1px solid #DBDEE1;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c6 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        colspan="2"
        scope="col"
      >
        Group 1
      </th>
      <th
        class="c4"
        scope="col"
      >
        Group 2
      </th>
    </tr>
    <tr
      class="c2"
    >
      <th
        class="c5"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
      <th
        class="c4"
        scope="col"
      >
        Column 3
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="0_column2"
      >
        World
      </td>
      <td
        class="c10"
        id="0_column3"
      />
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="1_column2"
      >
        Planet
      </td>
      <td
        class="c10"
        id="1_column3"
      />
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="2_column2"
      >
        Galaxy
      </td>
      <td
        class="c10"
        id="2_column3"
      />
    </tr>
  </tbody>
</table>
`;

exports[`Table has custom text alignment 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: right;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: center;
}

.c4:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c6:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c6 td {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
  text-align: right;
}

.c8 {
  background-color: inherit;
  text-align: center;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c5 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c4"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c5"
  >
    <tr
      class="c6"
      data-testid="table-row-0"
    >
      <td
        class="c7"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c8"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c6"
      data-testid="table-row-1"
    >
      <td
        class="c7"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c8"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c6"
      data-testid="table-row-2"
    >
      <td
        class="c7"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c8"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has error rows styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: #FDF7F6;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-3x) 0;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-3x) 0;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has rowNumbers styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c4:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c6:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c6 td {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
}

.c9 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c8 {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: #FFFFFF;
}

.c5 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3 eq-table__util-column"
        scope="col"
      />
      <th
        class="c4"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c4"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c5"
  >
    <tr
      class="c6"
      data-testid="table-row-0"
    >
      <td
        class="c7"
        id="0_numbers"
      >
        <span
          class="c8"
        >
          1
        </span>
      </td>
      <td
        class="c9"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c6"
      data-testid="table-row-1"
    >
      <td
        class="c7"
        id="1_numbers"
      >
        <span
          class="c8"
        >
          2
        </span>
      </td>
      <td
        class="c9"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c6"
      data-testid="table-row-2"
    >
      <td
        class="c7"
        id="2_numbers"
      >
        <span
          class="c8"
        >
          3
        </span>
      </td>
      <td
        class="c9"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has selectable rows styles 1`] = `
.c9 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c11 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  left: 0;
  margin: var(--spacing-half) var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c7:hover {
  background-color: #DBDEE1;
  border: 1px solid #000000;
}

.c5 {
  height: 0;
  opacity: 0;
  position: absolute;
  width: 0;
}

.c5:checked + .c6 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c5:checked + .c6 > .c8 {
  display: block;
}

.c5:indeterminate + .c6 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c5:indeterminate + .c6 > .c10 {
  display: block;
}

.c5 + .c6 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c5:focus-visible + .c6 {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:not(:first-of-type) {
  margin-top: var(--spacing-1x);
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c12 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c12:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c14 {
  background-color: inherit;
}

.c14:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c14 td {
  background-color: inherit;
}

.c15 {
  background-color: inherit;
}

.c16 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c13 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3 eq-table__util-column"
        scope="col"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-all"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="lucide lucide-check c8 c9"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <svg
              class="lucide lucide-minus c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </label>
      </th>
      <th
        class="c12"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c12"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c13"
  >
    <tr
      class="c14"
      data-testid="table-row-0"
    >
      <td
        class="c15"
        id="0_selection"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-0"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="lucide lucide-check c8 c9"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <svg
              class="lucide lucide-minus c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </label>
      </td>
      <td
        class="c16"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c16"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c14"
      data-testid="table-row-1"
    >
      <td
        class="c15"
        id="1_selection"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-1"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="lucide lucide-check c8 c9"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <svg
              class="lucide lucide-minus c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </label>
      </td>
      <td
        class="c16"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c16"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c14"
      data-testid="table-row-2"
    >
      <td
        class="c15"
        id="2_selection"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-2"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="lucide lucide-check c8 c9"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            <svg
              class="lucide lucide-minus c10 c11"
              fill="none"
              focusable="false"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </label>
      </td>
      <td
        class="c16"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c16"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has small rowSize styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-half) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-half) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  justify-self: flex-start;
}

.c4 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c4:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c6 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="ascending"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="lucide lucide-arrow-down c5"
            fill="none"
            focusable="false"
            height="16"
            stroke="#60666E"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 5v14"
            />
            <path
              d="m19 12-7 7-7-7"
            />
          </svg>
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="lucide lucide-chevrons-up-down c5"
            fill="none"
            focusable="false"
            height="16"
            stroke="#60666E"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 15 5 5 5-5"
            />
            <path
              d="m7 9 5-5 5 5"
            />
          </svg>
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c8"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c8"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c8"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky column styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c4:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c5 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c5:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
  text-align: left;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c9 {
  background-color: inherit;
  text-align: left;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c10 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c6 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c4"
        scope="col"
      >
        Column 2
      </th>
      <th
        class="c5"
        scope="col"
      >
        Column 3
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="0_column2"
      >
        Big
      </td>
      <td
        class="c10"
        id="0_column3"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="1_column2"
      >
        Big
      </td>
      <td
        class="c10"
        id="1_column3"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c9"
        id="2_column2"
      >
        Big
      </td>
      <td
        class="c10"
        id="2_column3"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky header styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 6;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5:nth-child(odd) {
  background-color: #FAFAFA;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: left;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
  text-align: left;
}

.c0 {
  background: transparent;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 thead th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: #FFFFFF;
}

.c4 {
  background: transparent;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
        id="0_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="0_column2"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
        id="1_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="1_column2"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
        id="2_column1"
      >
        Hello
      </td>
      <td
        class="c6"
        id="2_column2"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;
